# cmake-learning

./: CMakeLists.txt  README.md
include/: math.h  my_math_lib_inc.hpp
source/: main.cpp  math.c  my_math_lib_exe.cpp  my_math_lib_source.cpp
